changes text animations, fixed wrapping of CTA

--- a/src/components/PageComponents/Home/homeactionbanner.module.css
+++ b/src/components/PageComponents/Home/homeactionbanner.module.css
@@ -100,9 +100,12 @@
     }
 
 }
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 780px) {
     .ItemTitle {
       font-size: 34px;
+    }
+    .ButtonBox {
+      padding: 1rem 0;
     }
   }
   @media screen and (max-width: 480px) {
